--- a/Invenietis.Repositories/Invenietis.Repositories.csproj
+++ b/Invenietis.Repositories/Invenietis.Repositories.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,12 +47,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\LearningRepository.cs" />
     <Compile Include="Query\ProjectRepository.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Invenietis.Entities\Invenietis.Entities.csproj">
-      <Project>{4f59a6be-081a-4dfd-9ecc-7ec6e6ceabbf}</Project>
-      <Name>Invenietis.Entities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
