--- a/wrap/Invenietis.Repositories/project.json
+++ b/wrap/Invenietis.Repositories/project.json
@@ -8,7 +8,8 @@
         "pdb": "../../Invenietis.Repositories/obj/{configuration}/Invenietis.Repositories.pdb"
       },
       "dependencies": {
-        "Invenietis.Entities": "1.0.0-*"
+        "Invenietis.Entities": "1.0.0-*",
+        "EntityFramework": "1.0.0-*"
       }
     }
   }
